added npm info and fixed typos

--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
-  "name": "designproperties",
+  "name": "design-properties",
   "version": "0.0.1",
+  "description": "Salesforce1 design properties covering text colors, background color, font-sizes, fonts, spacings, borders etc.",
+  "keywords": [
+    "Salesforce",
+    "css",
+    "properties",
+    "sass",
+    "scss",
+    "stylus",
+    "less",
+    "iOS",
+    "Android"
+  ],
+  "license": "BSD 2-Clause",
   "engines": {
     "node": ">= 0.8.0"
   },
